--- a/Bootloader/Bootloader.ioc
+++ b/Bootloader/Bootloader.ioc
@@ -9,16 +9,19 @@ Mcu.Family=STM32F1
 Mcu.IP0=CRC
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=USART1
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
-Mcu.Pin4=VP_CRC_VS_CRC
-Mcu.PinsNb=5
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=VP_CRC_VS_CRC
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -35,10 +38,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -64,8 +71,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=BootLoader_Driver.ioc
-ProjectManager.ProjectName=BootLoader_Driver
+ProjectManager.ProjectFileName=Bootloader.ioc
+ProjectManager.ProjectName=Bootloader
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -94,6 +101,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=16000000
 RCC.USBFreq_Value=16000000
 RCC.VCOOutput2Freq_Value=4000000
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
