--- a/FOTA_STM_Workspace/ToggleLED_500ms/ToggleLED_500ms.ioc
+++ b/FOTA_STM_Workspace/ToggleLED_500ms/ToggleLED_500ms.ioc
@@ -8,13 +8,16 @@ Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=USART1
+Mcu.IPNb=3
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.PinsNb=3
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -31,6 +34,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -77,5 +84,7 @@ RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
 RCC.TimSysFreq_Value=8000000
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 board=custom
 isbadioc=false
