Add CAN protocal to master node to be communicated by it with tree

--- a/FOTA_STM_Workspace/Bootloader/Bootloader.ioc
+++ b/FOTA_STM_Workspace/Bootloader/Bootloader.ioc
@@ -2,15 +2,25 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CAN.BS1=CAN_BS1_16TQ
+CAN.BS2=CAN_BS2_8TQ
+CAN.CalculateBaudRate=5000
+CAN.CalculateTimeBit=200000
+CAN.CalculateTimeQuantum=8000.0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,NART,RFLM
+CAN.NART=ENABLE
+CAN.Prescaler=32
+CAN.RFLM=ENABLE
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=USART1
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP0=CAN
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=USART1
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
@@ -19,7 +29,9 @@ Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA9
 Mcu.Pin5=PA10
-Mcu.PinsNb=6
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -38,6 +50,10 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Mode=CAN_Activate
+PA11.Signal=CAN_RX
+PA12.Mode=CAN_Activate
+PA12.Signal=CAN_TX
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -79,7 +95,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true
 RCC.ADCFreqValue=4000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -90,16 +106,17 @@ RCC.APB2TimFreq_Value=8000000
 RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=8000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=8000000
-RCC.PLLCLKFreq_Value=56000000
-RCC.PLLMCOFreq_Value=28000000
+RCC.PLLCLKFreq_Value=112000000
+RCC.PLLMCOFreq_Value=56000000
 RCC.PLLMUL=RCC_PLL_MUL14
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=8000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
 RCC.TimSysFreq_Value=8000000
-RCC.USBFreq_Value=56000000
-RCC.VCOOutput2Freq_Value=4000000
+RCC.USBFreq_Value=112000000
+RCC.VCOOutput2Freq_Value=8000000
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
